# JoustManager

./: .gitignore  CMake.temp  CMakeLists.txt  main.cpp  rebuild.ps1  rebuild_debug.ps1  resources.qrc  weapons.txt
build_debug/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  JoustManager.sln  JoustManager.vcxproj  JoustManager.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
build_debug/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
src/: GameDialog.cpp  GameDialog.h  GameTimelineController.cpp  GameTimelineController.h  GameWindow.cpp  GameWindow.h  MainMenu.cpp  MainMenu.h  ManagerInterface.cpp  ManagerInterface.h  Player.cpp  Player.h  Purse.h
src/Items/: Item.h  ItemDetailDialog.cpp  ItemDetailDialog.h  ShopTabController.cpp  ShopTabController.h  ShopTabHandler.cpp  ShopTabHandler.h  ShopView.cpp  ShopView.h
src/Items/Armour/: GothicArmour.h
src/Items/Weapon/: CourteousLance.h
src/Knights/: Knight.cpp  Knight.h  KnightDetailDialog.cpp  KnightDetailDialog.h  KnightRecruitmentTab.cpp  KnightRecruitmentTab.h  KnightRosterTab.cpp  KnightRosterTab.h
src/Tournaments/: KnightSelectionDialog.cpp  KnightSelectionDialog.h  Tournament.cpp  Tournament.h  TournamentManager.h  TournamentRunnerDialog.cpp  TournamentRunnerDialog.h  TournamentTab.cpp  TournamentTab.h
src/Tournaments/Joust/: JoustView.cpp  JoustView.h
src/controller/items/: ShopTabController.cpp  ShopTabController.h
src/controller/knights/: KnightRecruitmentTabController.cpp  KnightRecruitmentTabController.h  KnightRosterTabController.cpp  KnightRosterTabController.h
src/controller/tournaments/: JoustController.cpp  JoustController.h  TournamentTabController.cpp  TournamentTabController.h
src/model/items/: Item.h  ShopTabHandler.cpp  ShopTabHandler.h
src/model/items/Armour/: GothicArmour.h
src/model/items/Weapon/: CourteousLance.h
src/model/knights/: Knight.cpp  Knight.h  KnightRecruitmentTabHandler.cpp  KnightRecruitmentTabHandler.h  KnightRosterTabHandler.h
src/model/tournaments/: JoustHandler.cpp  JoustHandler.h  Tournament.cpp  Tournament.h  TournamentTabHandler.cpp  TournamentTabHandler.h
src/view/items/: ItemDetailDialog.cpp  ItemDetailDialog.h  ShopView.cpp  ShopView.h
src/view/knights/: KnightDetailDialog.cpp  KnightDetailDialog.h  KnightRecruitmentView.cpp  KnightRecruitmentView.h  KnightRosterView.cpp  KnightRosterView.h
src/view/tournaments/: JoustView.cpp  JoustView.h  KnightSelectionDialog.cpp  KnightSelectionDialog.h  TournamentRunnerDialog.cpp  TournamentRunnerDialog.h  TournamentView.cpp  TournamentView.h
